Fix signup form width on mobile

--- a/css/driver-landing.css
+++ b/css/driver-landing.css
@@ -52,7 +52,7 @@ p, span {
 	}
 
 .signup {
-	width: 270px;
+	width: 240px;
 	position: relative;
 	top:initial;
 	margin: 20px auto 0 auto;
